--- a/PythonPractice_github/fifthweek07042025_11042025.ipynb
+++ b/PythonPractice_github/fifthweek07042025_11042025.ipynb
@@ -1791,7 +1791,389 @@
    "outputs": [],
    "source": [
     "#11-04-2025\n",
-    "#"
+    "#pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "23b6a993-82f8-44b7-aa6e-e770ff9383f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.2.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from pandas) (2025.1)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\senthil kumar\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "780a59aa-91b9-4b45-bcbe-77d11d2d2cf0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "pandas - a powerful data analysis and manipulation library for Python\n",
+      "=====================================================================\n",
+      "\n",
+      "**pandas** is a Python package providing fast, flexible, and expressive data\n",
+      "structures designed to make working with \"relational\" or \"labeled\" data both\n",
+      "easy and intuitive. It aims to be the fundamental high-level building block for\n",
+      "doing practical, **real world** data analysis in Python. Additionally, it has\n",
+      "the broader goal of becoming **the most powerful and flexible open source data\n",
+      "analysis / manipulation tool available in any language**. It is already well on\n",
+      "its way toward this goal.\n",
+      "\n",
+      "Main Features\n",
+      "-------------\n",
+      "Here are just a few of the things that pandas does well:\n",
+      "\n",
+      "  - Easy handling of missing data in floating point as well as non-floating\n",
+      "    point data.\n",
+      "  - Size mutability: columns can be inserted and deleted from DataFrame and\n",
+      "    higher dimensional objects\n",
+      "  - Automatic and explicit data alignment: objects can be explicitly aligned\n",
+      "    to a set of labels, or the user can simply ignore the labels and let\n",
+      "    `Series`, `DataFrame`, etc. automatically align the data for you in\n",
+      "    computations.\n",
+      "  - Powerful, flexible group by functionality to perform split-apply-combine\n",
+      "    operations on data sets, for both aggregating and transforming data.\n",
+      "  - Make it easy to convert ragged, differently-indexed data in other Python\n",
+      "    and NumPy data structures into DataFrame objects.\n",
+      "  - Intelligent label-based slicing, fancy indexing, and subsetting of large\n",
+      "    data sets.\n",
+      "  - Intuitive merging and joining data sets.\n",
+      "  - Flexible reshaping and pivoting of data sets.\n",
+      "  - Hierarchical labeling of axes (possible to have multiple labels per tick).\n",
+      "  - Robust IO tools for loading data from flat files (CSV and delimited),\n",
+      "    Excel files, databases, and saving/loading data from the ultrafast HDF5\n",
+      "    format.\n",
+      "  - Time series-specific functionality: date range generation and frequency\n",
+      "    conversion, moving window statistics, date shifting and lagging.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "print(pd.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "501917e8-acca-4c5b-865b-44700d12f1c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    4\n",
+       "1    2\n",
+       "2    6\n",
+       "3    7\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "l1 = [4,2,6,7]\n",
+    "s1 = pd.Series(l1)\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "fb8d0502-6ead-42eb-a9bb-53cf133eaa89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n",
+      "(4,)\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.dtype)\n",
+    "print(s1.shape)\n",
+    "print(s1[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4afb24a8-e67d-40fb-81b2-fca1658c8ae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7b38a51a-31ed-432f-93a9-b0ad8ec700cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d472bbb7-edfd-449d-8d0d-db8204177598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(s1.sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "95ad434a-2bfa-4260-b913-7bf0f9cc5e33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple    34\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "d1 = {\"apple\" : 34}\n",
+    "s1 = pd.Series(d1)\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "15c91379-9411-4db2-a15f-da15743bfc80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple     34\n",
+       "banana     5\n",
+       "cherry     9\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "\n",
+    "d1 = {\"apple\":34,\"banana\":5, \"cherry\":9}\n",
+    "s1 = pd.Series(d1)\n",
+    "s1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ac32212e-64ae-4efe-b94b-a8646d3a9031",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>apple</th>\n",
+       "      <th>banana</th>\n",
+       "      <th>cherry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>34</td>\n",
+       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   apple  banana  cherry\n",
+       "0     34       5       9\n",
+       "1     23       3       8\n",
+       "2     12       8       6"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {\"apple\": [34,23,12], \"banana\" : [5,3,8], \"cherry\":[9,8,6]}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3b2e7442-b0a0-4ff7-bde4-c859afe5ee02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    9\n",
+       "1    8\n",
+       "2    6\n",
+       "Name: cherry, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"cherry\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "982f1155-a529-473e-8fe1-d1ed29225bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "apple     23\n",
+       "banana     3\n",
+       "cherry     8\n",
+       "Name: 1, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edd2990e-e22d-4f25-aaa0-363deaffc0b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# vedio:19.36 11-04-2025"
    ]
   }
  ],
